--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "react-scrollreveal": "^1.2.0",
+    "react-typed": "^1.1.0",
+    "scrollreveal": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
