Added Icons to Footer

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-rellax": "^1.0.2",
     "react-scripts": "2.1.5",
     "react-scrollreveal": "^1.2.0",
     "react-typed": "^1.1.0",
